style.css
/* GENERAL */

.hidden {
    display: none !important;
}

body {
    background-color: #f8ffd0;
    color: black;
    font-family: Arial;
    user-select: none;
}

/* MENU*/ 

#menu {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 20px;
    height: 100dvh;
}

#menu button {
    font-size: 200%;
    border-radius: 10px;
    min-width: 25%;
    transition-duration: 0.2s;
}

#menu button:hover {
    background-color: #f9cb9c;
    min-width: 30%;
}

#menu h1 {
    margin: 0;
    font-size: 400%;
}

/* TUTORIAL */

#tutorial {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100dvh;
    gap: 3%
}

#tutorial button {
    font-size: 150%;
    border-radius: 10px;
    min-width: 20%;
    transition-duration: 0.2s;
}


#tutorial button:hover {
    background-color:#f9cb9c;
    min-width: 25%;
}

#tutorial h1 {
    font-size: 400%;
    margin: 0;
}

#tutorial p {
    font-size: 150%;
    text-align: center;
    margin: 0;
    width: 50%
}

/* GAMEPLAY SCREEN */

#gameplay-screen {
    display: flex;
    max-width: 100%;
    justify-content: space-between;
    align-items: center;
    padding: 5%;
}
/* #gameplay-screen #time-track{
    display: flex;
    flex-direction: row;
    justify-content: left;
    flex-wrap: wrap;
}

#gameplay-screen #score-track{
    display: flex;
    flex-direction: row;
    justify-content: right;
    flex-wrap: wrap;
    box-sizing:border-box;
} */

